// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserList Should render correctly 1`] = `
<div
  class="loader transparent"
>
  <div
    class="list"
  />
</div>
`;

exports[`UserList Should render correctly 2`] = `
<div
  class="loader transparent"
>
  <div
    class="list"
  />
  <div
    class="action"
  >
    <button
      class="button primary button"
    >
      <span
        class="wrap"
      >
        <span
          class="text relative"
        >
          Load more
        </span>
      </span>
    </button>
  </div>
</div>
`;
